--- a/Mainwidget.kv
+++ b/Mainwidget.kv
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 #:kivy 1.11.1
 <Main_widget>:
     MDBoxLayout:
@@ -181,8 +180,6 @@
         id:label 
 
 
-
-=======
 #:kivy 1.11.1
 <Main_widget>:
     MDBoxLayout:
@@ -389,14 +386,19 @@
                         xmin: 0
                         ymin: 0
                         ymax: 500
-                    BoxLayout:
+                        size_hint :(1,0.7)
+                        pos_hint: {'top':1}
+
+                    MDBoxLayout:
                         id:sensores
                         orientation: 'horizontal'
                         size_hint: (1,0.05)
+                        pos_hint:{'bottom':0.8}
+
                     MDFloatLayout:
                         orientation:'horizontal'
-                        size_hint :(1,0.15)
-                        pos_hint:{'y':0.8}
+                        size_hint :(1,0.1)
+                        pos_hint:{'bottom':0.8}
                         Label:
                             text:'Initial timestamp \r\n [size=12](DD/MM/AAAA HH:MM : SS)[/size] '
                             font_size: 12
@@ -434,7 +436,7 @@
 #radio box (cb_group)
 <LabeledCheckBoxHistGraph>:
     orientation:'horizontal'
-    size_hint: (0.05,0.1)
+    size_hint: (0.1,1)
     CheckBox:
         id:checkbox
         on_active: app.root.getDataDB()
@@ -442,8 +444,6 @@
         id:label 
         font_size:12
         bold: True
-
- 
                  
 
 #radio box (cb_group)
@@ -463,4 +463,3 @@
 
 
 
->>>>>>> 57be75a (final 1.0v)
